# app-backend-newsbridge

./: .gitignore  CORS_SETUP.md  Dockerfile  NEON_SETUP.md  Procfile  README.md  gunicorn.conf.py  pyproject.toml  railway.json  render-build.sh  requirements.txt  start.sh  test_api.py  test_api_translations.py
data/: schema.sql
scripts/: cleanup_database.py  create_and_translate_12_more.py  init_db.py  process_remaining_articles.py  query_db.py  test_combined.py  test_combined_with_storage.py  test_editorial.py  test_ingestion.py  test_translation.py  translate_12_more_gemini.py
src/: __init__.py
src/api/: main.py
src/core/: __init__.py  config.py  database.py  logging.py  schemas.py
src/editorial/: __init__.py  combined_processor.py  combined_prompt.py  prompts.py  quality_filter.py  story_selector.py  summarizer.py
src/ingestion/: __init__.py  deduplication.py  feed_parser.py  rss_collector.py
src/storage/: __init__.py  brief_repository.py  cleanup.py  repository.py  translation_repository.py
src/translation/: __init__.py  glossary.py  translator.py
tests/: __init__.py  conftest.py
tests/test_core/: test_config.py  test_database.py  test_schemas.py
tests/test_editorial/: __init__.py  test_quality_filter.py  test_story_selector.py
tests/test_ingestion/: test_feed_parser.py  test_rss_collector.py
tests/test_storage/: test_repository.py
