[project]
name = "global-knowledge-brief"
version = "0.1.0"
description = "Deliver global knowledge in regional languages"
requires-python = ">=3.12"
authors = [
    { name = "Global Knowledge Brief Team" }
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.3",
    "google-generativeai>=0.8.0",
    "tenacity>=8.4.2",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
    "mypy>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
